--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/fried-chicken.html">Fried Chicken</a>
+        <ol>
+            <li><a href="./recipes/fried-chicken.html">Fried Chicken</a></li>
+            <li><a href = "./recipes/taco-in-a-bag.html">Taco In a Bag</a></li>
+            <li><a href = "./recipes/breakfast-pizza.html">Breakfast Pizza</a></li>
+        </ol>
+        
     
 </body>
 </html>
