--- a/recipes/breakfast-pizza.html
+++ b/recipes/breakfast-pizza.html
@@ -8,24 +8,42 @@
     </head>
     <body>
         <a href="../index.html">Home</a>
-        <h1>Fried Chicken</h1>
-        <img src = "../images/fried-chicken.jpeg" alt = "A picture of some delicious fried chicken">
+        <h1>Breakfast Sausage Pizza</h1>
+        <img src = "../images/breakfast-pizza.jpeg" alt = "A picture of some delicious fried chicken">
 
         <h2>Description:</h2>
-        <p>This recipe is a delicous way to make some classic fried chicken.</p>
-        <p>Passed down from generation to generation, this recipe has been in my family for ever and gives Colonel Sanders a run for his money!</p>
+        <p>This recipe is a delicous way to make some amazing breakfast sausage pizza.</p>
+        <p>This recipe is a big hit at home and the kids always love it so much!</p>
 
         <h3>Ingridients</h3>
         <ul>
-            <li>1 chicken cut into pieces</li>
-            <li>salt and pepper to taste</li>
-            <li>1.5 cups all purpose flour for coating</li>
-            <li>2 quarts vegetable oil for frying</li>
+            <li>1.75 cups all-purpose flour</li>
+            <li>1 envelope RapidRise Yeast</li>
+            <li>.75 teaspoon salt</li>
+            <li>Two-thirds cup water</li>
+            <li>1 tablespoon olive oil</li>
+            <li>8 ounces sausage, cooked and crumbled</li>
+            <li>1 cup frozen hash brown potatoes, thawed</li>
+            <li>3 large eggs</li>
+            <li>.5 teaspoon Ground Mustard</li>
+            <li>.5 teaspoon Groudn Black Pepper</li>
+            <li>.5 teaspoon salt</li>
+            <li>1 cup shredded Cheddar Cheese</li>
         </ul>
 
         <h3>Steps</h3>
         <ol>
-            <li>In a large skillet, heat oil over medium heat. Salt and pepper chicken pieces to taste, then roll in flour to coat. Place chicken pieces in skillet and fry on medium heat until one side is golden brown, then turn and brown other side until chicken is no longer pink inside and its juices run clear. Drain on paper towel and serve!</li>
+            <li>Combine 1 cup flour, undissolved yeast and salt in a large bowl. Heat water and oil until very warm (120 degrees to 130 degrees F). Add to flour mixture and beat for 2 minutes. Add enough remaining flour to make a soft dough. Knead until smooth and elastic, about 5 minutes. (If using RapidRise yeast, let dough rest at this point for 10 minutes.)    
+            </li>
+            <li>
+                Roll dough to 12-inch circle; place in greased pizza pan. OR, pat dough with floured hands, pressing gently to fill greased pizza pan or baking sheet. Form a rim by pinching the edge of the dough; prick surface with fork. 
+            </li>
+            <li>
+                Bake crust in preheated 450 degrees F oven on lowest oven rack for 8 minutes. Reduce oven to 375 degrees F. Remove pizza from oven.
+            </li>
+            <li>
+                Top pizza crust with sausage, hash browns and onions. Beat eggs, ground mustard, pepper and salt together in a bowl. Pour over toppings. Sprinkle with cheese. Bake for 16 to 20 minutes until eggs are set and crust is browned.
+            </li>
         </ol>
     </body>
 </html>
