--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-        <h1>Odin Recipes</h1>
+        <h1 class = "title">Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/fried-chicken.html">Fried Chicken</a></li>
             <li><a href = "./recipes/taco-in-a-bag.html">Taco In a Bag</a></li>
