Add classes to recipe titles, edit link style

--- a/recipes/taco-in-a-bag.html
+++ b/recipes/taco-in-a-bag.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <a href="../index.html">Home</a>
-        <h1>Taco In a Bag</h1>
+        <h1 class = "title">Taco In a Bag</h1>
         <img src = "../images/taco-in-bag.jpeg" alt = "A picture of some delicious taco in a bag">
 
         <h2>Description:</h2>
