--- a/recipes/breakfast-pizza.html
+++ b/recipes/breakfast-pizza.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <a href="../index.html">Home</a>
-        <h1>Breakfast Sausage Pizza</h1>
+        <h1 class = "title">Breakfast Sausage Pizza</h1>
         <img src = "../images/breakfast-pizza.jpeg" alt = "A picture of some delicious fried chicken">
 
         <h2>Description:</h2>
