--- a/recipes/fried-chicken.html
+++ b/recipes/fried-chicken.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <a href="../index.html">Home</a>
-        <h1>Fried Chicken</h1>
+        <h1 class = "title">Fried Chicken</h1>
         <img src = "../images/fried-chicken.jpeg" alt = "A picture of some delicious fried chicken">
 
         <h2>Description:</h2>
