Add style to description header and description

--- a/recipes/breakfast-pizza.html
+++ b/recipes/breakfast-pizza.html
@@ -13,10 +13,14 @@
         <img src = "../images/breakfast-pizza.jpeg" alt = "A picture of some delicious fried chicken">
 
         <h2>Description:</h2>
-        <p>This recipe is a delicous way to make some amazing breakfast sausage pizza.</p>
-        <p>This recipe is a big hit at home and the kids always love it so much!</p>
 
-        <h3>Ingridients</h3>
+        <div class = "description">
+            <p>This recipe is a delicous way to make some amazing breakfast sausage pizza.</p>
+            <p>This recipe is a big hit at home and the kids always love it so much!</p>
+        </div>
+        
+
+        <h3>Ingredients</h3>
         <ul>
             <li>1.75 cups all-purpose flour</li>
             <li>1 envelope RapidRise Yeast</li>
