--- a/recipes/fried-chicken.html
+++ b/recipes/fried-chicken.html
@@ -13,10 +13,13 @@
         <img src = "../images/fried-chicken.jpeg" alt = "A picture of some delicious fried chicken">
 
         <h2>Description:</h2>
-        <p>This recipe is a delicous way to make some classic fried chicken.</p>
-        <p>Passed down from generation to generation, this recipe has been in my family for ever and gives Colonel Sanders a run for his money!</p>
+        <div class = "description">
+            <p>This recipe is a delicous way to make some classic fried chicken.</p>
+            <p>Passed down from generation to generation, this recipe has been in my family for ever and gives Colonel Sanders a run for his money!</p>
 
-        <h3>Ingridients</h3>
+        </div>
+        
+        <h3>Ingredients</h3>
         <ul>
             <li>1 chicken cut into pieces</li>
             <li>salt and pepper to taste</li>
