--- a/recipes/taco-in-a-bag.html
+++ b/recipes/taco-in-a-bag.html
@@ -13,9 +13,11 @@
         <img src = "../images/taco-in-bag.jpeg" alt = "A picture of some delicious taco in a bag">
 
         <h2>Description:</h2>
-        <p>This recipe is a delicous way to make some classic taco in a bag .</p>
-        <p>Taco in a bag is a great food on the go! You can have it while walking at a festiavl, concert, as a picnic snack. And it's delicous!</p>
-
+        <div class = "description">
+            <p>This recipe is a delicous way to make some classic taco in a bag .</p>
+            <p>Taco in a bag is a great food on the go! You can have it while walking at a festiavl, concert, as a picnic snack. And it's delicous!</p>
+        </div>
+        
         <h3>Ingredients</h3>
         <ul>
             <li>1 pound lean ground beef</li>
